--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,13 @@ main {
     object-fit: cover;
 }
 
+.video-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
 .controls {
     position: absolute;
     bottom: 10px;
