--- a/css/style.css
+++ b/css/style.css
@@ -174,22 +174,22 @@ main {
         padding-top: 0;
     }
 
-    .video-container {
-        width: 100%;
-        height: 99%; /* Proporção 4:5 (largura:altura) */
-        max-height: calc(100vh - 120px); /* Limite no mobile */
-        border-radius: 0;
-        background: rgba(255, 255, 255, 0.1);
-        overflow: hidden;
-    }
-
     main {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         padding-bottom: 80px;
-        height: 100%;
+        height: auto; /* Ajuste para garantir o comportamento correto */
+    }
+
+    .video-container {
+        width: 100%;
+        max-width: 400px;
+        height: 80vh; /* Alterado para deixar um espaço abaixo */
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 0;
+        overflow: hidden;
     }
 }
 
