--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ main {
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 90px;
+        height: 90px; /* Altura do footer-nav */
         background-color: #000;
         border-top: 1px solid rgba(255, 255, 255, 0.1);
     }
@@ -186,7 +186,7 @@ main {
     .video-container {
         width: 100%;
         max-width: 400px;
-        height: 70vh; /* Alterado para deixar um espaço abaixo */
+        height: calc(100vh - 90px); /* Altura da página menos a altura do footer-nav */
         background: rgba(255, 255, 255, 0.1);
         border-radius: 0;
         overflow: hidden;
