--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,15 @@ main {
 
 
 @media screen and (max-width: 768px) {
+    body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        height: 100vh; /* Garante que o body não ultrapasse a altura da tela */
+        overflow: hidden;
+    }
+
     .footer-nav {
         display: flex;
         justify-content: space-around;
@@ -149,9 +158,10 @@ main {
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 90px; /* Altura do footer-nav */
+        height: 90px; /* Altura do footer */
         background-color: #000;
         border-top: 1px solid rgba(255, 255, 255, 0.1);
+        z-index: 2;
     }
 
     .footer-nav ion-icon {
@@ -184,12 +194,16 @@ main {
     }
 
     .video-container {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         max-width: 400px;
-        height: calc(100vh - 90px); /* Altura da página menos a altura do footer-nav */
+        height: calc(100% - 90px); /* Calcula a altura total menos o footer-nav */
         background: rgba(255, 255, 255, 0.1);
         border-radius: 0;
         overflow: hidden;
+        z-index: 1;
     }
 }
 
