--- a/css/style.css
+++ b/css/style.css
@@ -195,12 +195,16 @@ main {
     }
 
     .video-container {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         max-width: 400px;
+        height: calc(100% - 90px); /* Calcula a altura total menos o footer-nav */
         background: rgba(255, 255, 255, 0.1);
         border-radius: 0;
         overflow: hidden;
-        height: calc(100vh - 90px); /* Calcula a altura subtraindo a altura do footer-nav */
+        z-index: 1;
     }
 
 }
