--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,23 @@ main {
     margin-right: 10px;
 }
 
+.close-modal {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    color: #fff;
+    cursor: pointer;
+    transition: color 0.3s;
+}
+
+.close-modal:hover {
+    color: #ff0000; /* Cor vermelha ao passar o mouse */
+}
+
+
 /* Estilo do Alert */
 .alert {
     position: fixed;
