--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ main {
     background: none;
     border: none;
     font-size: 1.5rem;
-    color: #fff;
+    color: #969696;
     cursor: pointer;
     transition: color 0.3s;
 }
