--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ main {
 
 .modal-content h3 {
     margin-bottom: 20px;
-    color: #b5b5b5;
+    color: #858585;
     font-size: 1.6rem;
     font-weight: bold;
     letter-spacing: 1px;
