--- a/css/style.css
+++ b/css/style.css
@@ -392,3 +392,74 @@ main {
     opacity: 1;
     transform: translateX(-50%) translateY(0);
 }
+
+/* Estilo do Modal */
+.comments-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 0, 0);
+    z-index: 1000;
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 15px;
+    background: #1a1a1a;
+    color: white;
+    font-size: 18px;
+    border-bottom: 1px solid #333;
+}
+
+.modal-header h2 {
+    margin: 0;
+    font-weight: 500;
+  }
+  
+  .modal-header ion-icon {
+    font-size: 24px;
+    cursor: pointer;
+    color: #bbb;
+    transition: color 0.2s;
+  }
+  
+  .modal-header ion-icon:hover {
+    color: #fff;
+  }
+  
+.modal-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: calc(100% - 50px);
+    color: white;
+    text-align: center;
+}
+
+/* Ícone de Cadeado */
+.lock-icon {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .lock-icon ion-icon {
+    font-size: 50px;
+    color: rgba(38, 46, 75, 0.8);
+  }
+  
+  /* Texto */
+  .comments-disabled p {
+    margin-top: 15px;
+    font-size: 16px;
+    color: rgba(200, 200, 200, 0.9);
+    font-weight: 400;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+  }
+  
